--- a/debugging/src/app/app.component.html
+++ b/debugging/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    
+    <div class="col-xs-12">
       <h2>My Servers</h2>
       <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
       <br><br>
